User register documentation
